# xue_hua_device_info

./: CHANGELOG.md  README.md  README.zh-CN.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/flutter_rust_bridge/xue_hua_device_info/: AndroidDeviceInfo.kt  XueHuaDeviceInfoPlugin.kt
cargokit/gradle/: plugin.gradle
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/xue_hua_device_info_example/: MainActivity.kt
example/integration_test/: simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: xue_hua_device_info.podspec
lib/: xue_hua_device_info.dart
lib/src/: device_info.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  models.dart
lib/src/rust/api/: device_info.dart
linux/: CMakeLists.txt
macos/: xue_hua_device_info.podspec
rust/: Cargo.toml
rust/src/: android_init.rs  desktop.rs  error.rs  frb_generated.rs  lib.rs  models.rs  platform.rs
rust/src/api/: device_info.rs
rust/src/desktop/: linux.rs  macos.rs  windows.rs
rust/src/mobile/: android.rs  ios.rs  jni_helpers.rs  mod.rs
test/: device_info_test.dart
windows/: CMakeLists.txt
