[package]
name = "xue_hua_device_info"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
sysinfo = "0.34.2"
local-ip-address = "0.6.9"
default-net = "0.22.0"
tokio = { version = "1", features = ["rt"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winbase", "winnt", "winuser", "shellscalingapi"] }
wmi = "0.13"
battery = "0.7.8"

[target.'cfg(target_os = "macos")'.dependencies]
battery = "0.7.8"
core-graphics = "0.25.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
battery = "0.7.8"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-ui-kit = "0.3"
libc = "0.2"
security-framework = "3.7.0"
network-framework-sys = "0.1.0"
block2 = "0.6.2"
dispatch2 = "0.3.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
