[package]
name = "xue_hua_device_info"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
sysinfo = { version = "0.39.5", default-features = false, features = ["system", "disk", "network"] }
local-ip-address = "0.6.13"
default-net = "0.22.0"
tokio = { version = "1.52.3", features = ["rt"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winbase", "winnt", "winuser", "shellscalingapi"] }
wmi = "0.18.4"
battery = "0.7.8"

[target.'cfg(target_os = "macos")'.dependencies]
battery = "0.7.8"
core-graphics = "0.25.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.186"
battery = "0.7.8"

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
objc2-ui-kit = "0.3.2"
libc = "0.2.186"
security-framework = "3.7.0"
network-framework-sys = "0.1.0"
block2 = "0.6.2"
dispatch2 = "0.3.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
